--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Fisrt react redux app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register --require ./test/setup.js",
+    "test:watch": "npm test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -21,5 +23,30 @@
   "bugs": {
     "url": "https://github.com/ben196888/TodoApp/issues"
   },
-  "homepage": "https://github.com/ben196888/TodoApp#readme"
+  "homepage": "https://github.com/ben196888/TodoApp#readme",
+  "dependencies": {
+    "babel-polyfill": "^6.8.0",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.8.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-register": "^6.8.0",
+    "cross-env": "^1.0.7",
+    "expect": "^1.20.1",
+    "express": "^4.13.4",
+    "jsdom": "^9.0.0",
+    "mocha": "^2.4.5",
+    "node-libs-browser": "^1.0.0",
+    "react-addons-test-utils": "^15.0.2",
+    "webpack": "^1.13.0",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
+  }
 }
